# gwcli-hs

./: .gitignore  ChangeLog.md  README.md  cabal.project  dot_gwcli.yaml.example  gwcli.cabal  hie.yaml  package.yaml  stack.yaml
.github/workflows/: build.yml  linux_build.yml  release.yml
app/: Main.hs
src/: BitbucketApi.hs  CommandLineParser.hs  CredentialUtils.hs  GitHub.hs  GitHubApi.hs  GitUtils.hs  JsonUtils.hs  ListUtils.hs  Opener.hs  Remote.hs  RemoteTypes.hs  StringUtils.hs  Types.hs  WebUtils.hs
src/Bitbucket/: Common.hs  Issue.hs  PullRequest.hs  Utils.hs
src/GitHub/: Issue.hs  PullRequest.hs  Utils.hs
src/Types/: Issue.hs  PullRequest.hs
